# github-actions-practice

./: .publish-release.sh  Dockerfile  README.md  aaa.txt  aqua.yaml  requirements.txt  test-2.sh  test.txt
.github/: auto_assgin.yml  auto_assign.yml  labeler.yml
.github/actions/: check-change.sh  script.js
.github/workflows/: actionlint.yaml  actionlint.yml  artifact.yml  atlas-ci.yaml  auto-approve.yml  auto-assign.yml  auto-merge.yml  auto-pr.yml  auto-release-when-pr-is-merged.yml  awscli.yml  branch-and-tag.yml  build-and-push.yml  changed-files-workflow-and-pr.yml  changed-files.yml  check-actions-name.yml  check-change.yml  check-diff.yml  check-if-latest.yml  check-operator-sdk-release.yml  check-release.yml  cleanup-gha-cache.yml  conditional-auto-approve.yml  context.yml  create-pr-if-outdated.yml  create-pr-when-pr-is-merged.yml  create-pr-with-github-app.yml  create-pull-request.yml  default-commands.yml  docker-layer-cache.yml  draft-release.yml  environment.yaml  envvar.yml  failure.yml  github-comment.yml  github-script.yml  graphviz.yml  jq.yml  json-to-md-table.yaml  json-to-md-table.yml  k8s-ci.yml  (+45 more)
atlas/migrations/: schema.sql
automatic-approval/: test.txt
automatic-merge/: test.txt
check-change/: README.md
check-change/test-1/auto-merge/: sample.yaml
docker-layer-cache/: Dockerfile  Dockerfile.cache  Dockerfile.multistage  app.py  requirements.txt
k8s-ci/: deployment.yaml
minio/: Dockerfile
not-automated/: test.txt
poetry/: pyproject.toml
python-script/: requirements.txt
terraform/: docker.tf
(+1 files in other folders)
